--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "extend": "^3.0.0",
     "helmet": "^1.3.0",
     "jsonwebtoken": "^7.1.9",
     "loopback": "^2.22.0",
@@ -35,6 +36,7 @@
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
     "passport-google": "^0.3.0",
+    "passport-jwt": "^2.2.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.0.1",
     "yyyy-mm-dd": "^1.0.1"
