--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "loopback-passport-jwt",
   "version": "1.0.0",
-  "description": "An express router in loopback with passport for local or social login and JWT (no session)",
-  "main": "server/server.js",
-  "scripts": {
-    "lint": "eslint .",
-    "start": "node .",
-    "posttest": "npm run lint && nsp check"
-  },
+  "description": "loopback module with passport for local or social login and JWT (no session)",
+  "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miyomahc/loopback-passport-jwt.git"
+    "url": "git+https://github.com/miyda/loopback-passport-jwt.git"
   },
-  "homepage": "https://github.com/miyomahc/loopback-passport-jwt#readme",
-  "license": "ISC",
+  "homepage": "https://github.com/miyoda/loopback-passport-jwt#readme",
+  "license": "MIT",
   "keywords": [
     "loopback",
     "passport",
@@ -23,30 +18,16 @@
     "router"
   ],
   "dependencies": {
-    "compression": "^1.0.3",
-    "cors": "^2.5.2",
-    "extend": "^3.0.0",
-    "helmet": "^1.3.0",
     "jsonwebtoken": "^7.1.9",
-    "loopback": "^2.22.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^2.4.0",
-    "loopback-connector-mongodb": "^1.17.0",
-    "loopback-datasource-juggler": "^2.39.0",
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
     "passport-google": "^0.3.0",
     "passport-jwt": "^2.2.0",
-    "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^1.0.1",
     "yyyy-mm-dd": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^2.13.1",
-    "eslint-config-loopback": "^4.0.0",
-    "nsp": "^2.1.0"
   },
   "bugs": {
-    "url": "https://github.com/miyomahc/loopback-passport-jwt/issues"
+    "url": "https://github.com/miyoda/loopback-passport-jwt/issues"
   }
 }
